--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Nanna Bach-Møller</h2>
+								<p>Early Stage researcher in Astrophysics.</p>
 							</header>
 
 							<footer>
