--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Nanna Bach-Møller</h1>
+							<p> Early Stage researcher in Astrophysics. </p>
 						</div>
 
 					<!-- Nav -->
@@ -60,8 +60,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Nanna Bach-Møller</h2>
-								<p>Early Stage researcher in Astrophysics.</p>
+								<h2 class="alt">Hello, and welcome to my webpage!</h2>
+								<p>If you would like to know a bit about what I've got going, take a look at some of my projects below.</p>
 							</header>
 
 							<footer>
