--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hello, and welcome to my webpage!</h2>
-								<p>If you would like to know a bit about what I've got going, take a look at some of my projects below.</p>
+								<h2 class="alt">Welcome!</h2>
+								<p> Hi, my name is Nanna, and I am a PhD student at the University of Copenhagen
+								and Graz University of Technology, as well as an early stage researcher at the Marie Curie
+								ITN CHAMELEON. If you would like to know a bit about what I've got going, take a look at
+								some of my projects below.</p>
 							</header>
 
 							<footer>
