--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2 class="alt">Welcome!</h2>
 								<p> Hi, my name is Nanna, and I am a PhD student at the <a href="https://www.ku.dk/english/">University of Copenhagen</a> 
 								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early stage researcher at the Marie Curie
-								ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. If you would like to know a bit about what I've got going, take a look at
+								ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. If you would like to know a bit about what I've got going, you are welcome to take a look at
 								some of my projects below.</p>
 							</header>
 
