--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Research</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -61,10 +61,12 @@
 
 							<header>
 								<h2 class="alt">Welcome!</h2>
-								<p> Hi, my name is Nanna, and I am a PhD student at the <a href="https://www.ku.dk/english/">University of Copenhagen</a> 
-								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early stage researcher at the Marie Curie
-								ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. If you would like to know a bit about what I've got going, you are welcome to take a look at
-								some of my projects below.</p>
+								<p> Hi, my name is Nanna, and I am a PhD student at the 
+								<a href="https://www.ku.dk/english/">University of Copenhagen</a> 
+								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
+								stage researcher at the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. 
+								If you would like to know a bit about what I've got going, you are welcome to take a look at some of 
+								my projects below.</p>
 							</header>
 
 							<footer>
@@ -79,7 +81,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Research</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
