--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
 								<h2>Research</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p> My main field of interest is astrobiology, the search for life in space, and I am especially interested in
+							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. 
+							In my current research I am trying to study how clouds affect the chemistry of exoplanet atmospheres, and how prebiotic
+							molecules (the precursors of life) might form in cloud droplets. During this project I am doing experiments with
+							clouds in an atmosphere chamber, to look at how they form and develop under gamma and UV radiation. Later I am hoping
+							to implement these results in our computer models of atmospheres, so we can use the models to potentially identify
+							life when we look at real exoplanets. </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
