--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 							clouds in an atmosphere chamber, to look at how they form and develop under gamma and UV radiation. Later I am hoping
 							to implement these results in our computer models of atmospheres, so we can use the models to potentially identify
 							life when we look at real exoplanets. </p>
+							
+							<p> Bach-Møller, Nanna, and Uffe G. Jørgensen. "Orbital eccentricity–multiplicity correlation for planetary systems
+							and comparison to the Solar system." <em>Monthly Notices of the Royal Astronomical Society</em>  500.1 (2021): 1313-1322. </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
