--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 							to implement these results in our computer models of atmospheres, so we can use the models to potentially identify
 							life when we look at real exoplanets. </p>
 							
+							<header>
+								<h3>Publications</h3>
+							</header>
+							
 							<p> Bach-Møller, Nanna, and Uffe G. Jørgensen. <a href="https://academic.oup.com/mnras/article-abstract/500/1/1313/5944142">
 							Orbital eccentricity–multiplicity correlation for planetary systems and comparison to the Solar system.</a> 
 							<em>Monthly Notices of the Royal Astronomical Society</em>  500.1 (2021): 1313-1322. </p>
