--- a/index.html
+++ b/index.html
@@ -104,9 +104,12 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/eM.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>We have found a correlation between the shape of the orbit (eccentricity) of exoplanets
+											and the number of planets in the systems (multiplicity), such that larger systems have more
+											circular orbits. This is true for all studies planet types, such as Hot Jupiters (HJ), Cold 
+											Jupiters (CJ) and Super Earths (SE). </h3>
 										</header>
 									</article>
 									<article class="item">
