--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							</header>
 
 							<footer>
-								<a href="#research" class="button scrolly">Magna Aliquam</a>
+								<a href="#research" class="button scrolly">Read more</a>
 							</footer>
 
 						</div>
@@ -102,18 +102,19 @@
 							<em>Monthly Notices of the Royal Astronomical Society</em>  500.1 (2021): 1313-1322. </p>
 
 							<div class="row">
-								<div class="col-4 col-12-mobile">
+								<div class="col-6 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/eM.png" alt="" /></a>
+										<a href="https://academic.oup.com/mnras/article-abstract/500/1/1313/5944142" class="image fit">
+											<img src="images/eM.png" alt="" /></a>
 										<header>
-											<h3>We have found a correlation between the shape of the orbit (eccentricity) of exoplanets
-											and the number of planets in the systems (multiplicity), such that larger systems have more
-											circular orbits. This is true for all studies planet types, such as Hot Jupiters (HJ), Cold 
+											<h3>We have found a correlation between the shape of planetary orbits (eccentricity)
+											and the number of planets (multiplicity) in exoplanet systems, such that larger systems have more
+											circular orbits. This is true for all studied planet types, such as Hot Jupiters (HJ), Cold 
 											Jupiters (CJ) and Super Earths (SE). </h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Lab setup radiation.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
