--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Lab setup radiation.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Labsetup.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3> ... </h3>
 										</header>
 									</article>
 								</div>
