--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Labsetup.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Labsetup.png" alt="" /></a>
 										<header>
 											<h3> ... </h3>
 										</header>
@@ -122,7 +122,7 @@
 								</div>
 								<div class="col-6 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Abundanceprofile.jpg" alt="" /></a>
 										<header>
 											<h3>Magna Nullam</h3>
 										</header>
