--- a/index.html
+++ b/index.html
@@ -114,9 +114,12 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Labsetup.png" alt="" /></a>
+										<img src="images/Labsetup.png" alt="" />
 										<header>
-											<h3> ... </h3>
+											<h3> In my current research I use an atomizer to introduce SiO2 particles into an atmosphere
+											chamber. Similarly to the environment in the upper atmosphere, the particles in the chamber are
+											radiated with UV and gamma radiation, which will affect their tendency to aggregate and
+											form cloud droplets. </h3>
 										</header>
 									</article>
 								</div>
