--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<img src="images/Labsetup.png" alt="" />
+										<img src="images/Labsetup.jpg" alt="" />
 										<header>
 											<h3> In my current research I use an atomizer to introduce SiO2 particles into an atmosphere
 											chamber. Similarly to the environment in the upper atmosphere, the particles in the chamber are
@@ -125,7 +125,7 @@
 								</div>
 								<div class="col-6 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Abundanceprofile.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Abundanceprofile.png" alt="" /></a>
 										<header>
 											<h3>Magna Nullam</h3>
 										</header>
