--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<img src="images/Labsetup.jpg" alt="" />
+										<a class="image fit"><img src="images/Labsetup.jpg" alt="" />
 										<header>
 											<h3> In my current research I use an atomizer to introduce SiO2 particles into an atmosphere
 											chamber. Similarly to the environment in the upper atmosphere, the particles in the chamber are
