--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a class="image fit"><img src="images/Labsetup.jpg" alt="" />
+										<a href="#" class="image fit"><img src="images/Labsetup.jpg" alt="" /></a>
 										<header>
 											<h3> In my current research I use an atomizer to introduce SiO2 particles into an atmosphere
 											chamber. Similarly to the environment in the upper atmosphere, the particles in the chamber are
@@ -127,13 +127,10 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/Abundanceprofile.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Atmosphere models can be used to simulate the chemical and physical processes taking place
+											in an atmosphere, and thereby predict the structure of the atmosphere based on e.g. the chemical
+											composition and type of host star. This is an example of how different molecules are distributed
+											throughout the atmosphere of the exoplanet HATS-6b according to an atmosphere model.</h3>
 										</header>
 									</article>
 								</div>
