--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 									adipiscing leo in, dignissim magna.</p>  <!-- JOB DESCRIPTION  -->
   								</div>
   							</div>
+					</section>
 
 
 				<!-- Contact -->
