--- a/index.html
+++ b/index.html
@@ -235,6 +235,19 @@
 									adipiscing leo in, dignissim magna.</p>  <!-- JOB DESCRIPTION  -->
   								</div>
   							</div>
+  						</div>
+								
+						<div class="row">
+							<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
+							<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
+							<div class="col-12">
+								<textarea name="message" placeholder="Message"></textarea>
+							</div>
+							<div class="col-12">
+								<input type="submit" value="Send Message" />
+							</div>
+						</div>
+		
 					</section>
 
 
