--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					</section>
 				
 					<section class="experience section-padding">
-  						<div class="left">
+  						<div align = "left">
   							<h3 class="experience-title">Experience</h3>
       
   							<div class="experience-wrapper">
