--- a/index.html
+++ b/index.html
@@ -227,15 +227,15 @@
 								<header>
 									<em>Education</em>
 								</header>
-								<p> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </p>
-								<p> Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> </p>
-								<p> Acted as local observer at La Silla Observatory for the MiNDSTEp consortium, with focus on microlensing and transit observations of exoplanets. </p>
-								<p> Research project in astrobiology at <em> Virtual Planetary Laboratory </em> at the University of Washington. </p>
-								<p> 2016 - 2018 - Bachelors's degree in Biology | University of Copenhagen </p>
-								<p> Major in Molecular and Cell biology. Thesis on <em>"Comparative Analysis of Multi- and Monospecies Cultures"</em> </p>
-								<p> Research project on the Bacterial Responses to the Environment of Microgravity based on existing scientific litterature. </p>
-								<p> 2013 - 2016 - Bachelors's degree in Physics | University of Copenhagen </p>
-								<p> Major in Astrophysics. Thesis on <em>"Orbital Eccentricity - Multiplicity Correlation for Planetary Systems"</em> </p>
+								<p> 2018 - 2020 - Master's degree in Physics | University of Copenhagen <br>
+								Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> <br>
+								Acted as local observer at La Silla Observatory for the MiNDSTEp consortium, with focus on microlensing and transit observations of exoplanets. <br>
+								Research project in astrobiology at <em> Virtual Planetary Laboratory </em> at the University of Washington. </p>
+								<p> 2016 - 2018 - Bachelors's degree in Biology | University of Copenhagen <br>
+								Major in Molecular and Cell biology. Thesis on <em>"Comparative Analysis of Multi- and Monospecies Cultures"</em> <br>
+								Research project on the Bacterial Responses to the Environment of Microgravity based on existing scientific litterature. </p>
+								<p> 2013 - 2016 - Bachelors's degree in Physics | University of Copenhagen <br>
+								Major in Astrophysics. Thesis on <em>"Orbital Eccentricity - Multiplicity Correlation for Planetary Systems"</em> </p>
 							</div>
   						</div>
 
