--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 				</div>
 
-				<!-- 
+				<!--  COMMENT OUT SOCIAL ICONS
 				<div class="bottom">
 
-					<!-- Social Icons -->
+					<!-- Social Icons --> <!-- COMMENT OUT SOCIAL ICONS
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
