--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
 								<header>
 									<em>Education</em>
 								</header>
-								<p><b> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b><br>
+								<p><b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> <br>
 								Acted as local observer at La Silla Observatory for the MiNDSTEp consortium, with focus on microlensing and transit observations of exoplanets. <br>
 								Research project in astrobiology at <em> Virtual Planetary Laboratory </em> at the University of Washington. </p>
-								<p><b> 2016 - 2018 - Bachelors's degree in Biology | University of Copenhagen </b> <br>
+								<p><b><u> 2016 - 2018 - Bachelors's degree in Biology | University of Copenhagen </b></u> <br>
 								Major in Molecular and Cell biology. Thesis on <em>"Comparative Analysis of Multi- and Monospecies Cultures"</em> <br>
 								Research project on the Bacterial Responses to the Environment of Microgravity based on existing scientific litterature. </p>
-								<p><b> 2013 - 2016 - Bachelors's degree in Physics | University of Copenhagen </b><br>
+								<p><b><u> 2013 - 2016 - Bachelors's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Orbital Eccentricity - Multiplicity Correlation for Planetary Systems"</em> </p>
 							</div>
   						</div>
