--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       
 							<div align="left">
 								<header>
-									<em>Education</em>
+									<h4>Education</h4>
 								</header>
 								<p><b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> <br>
