--- a/index.html
+++ b/index.html
@@ -239,6 +239,13 @@
 								Research project on the Bacterial Responses to the Environment of Microgravity based on existing scientific litterature. </p>
 								<p><b><u> 2013 - 2016 - Bachelors's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Orbital Eccentricity - Multiplicity Correlation for Planetary Systems"</em> </p>
+								
+								<header>
+									<h4>Skills</h4>
+								</header>
+								<p> Coding experience with MATLAB, Python, Fortran, LaTeX <br>
+								Language: Danish (native), English (advanced) </p>
+							
 							</div>
   						</div>
 
