--- a/index.html
+++ b/index.html
@@ -300,15 +300,16 @@
 
 			</div>
 
-		<!-- Footer -->
+		<!-- Footer --> <!-- REMOVE FOOTER
 			<div id="footer">
 
-				<!-- Copyright -->
+				<!-- Copyright --> <!-- REMOVE FOOTER
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
+		-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
