--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/me.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/me.jpg" alt="" /></span>
 							<h1 id="title">Nanna Bach-Møller</h1>
 							<p> Early Stage researcher in Astrophysics. </p>
 						</div>
