--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<a href="https://www.ku.dk/english/">University of Copenhagen</a> 
 								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
 								stage researcher at the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. 
-								If you would like to know a bit about what I've got going, you are welcome to take a look at some of 
+								If you would like to know a bit about what I'm doing, you are welcome to take a look at some of 
 								my projects below.</p>
 							</header>
 
