--- a/index.html
+++ b/index.html
@@ -172,14 +172,21 @@
 								<h2>Other Activities</h2>
 							</header>
 
-							<p> ... </p>
+							<p> To me, one of the most beautiful aspects of astrophysics is how many thoughts and emotions
+							is can create, not just i myself but in other people as well. So when I'm not doing research
+							I often enjoy sharing these thoughts with other people through outreach and creative projects.  </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/ne.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Parallel to my studies I have long been working with outreach at <a href="https://en.planetarium.dk/">
+											Copenhagen Planetarium.</a> This collaboration has lead to many projects, including talks and events such
+											as <a href="https://planetarium.dk/program/chasing-stars-in-chairs/"> Chasing Stars in Chairs</a> and
+											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>,
+											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog</a> over
+											my time as an observer at La Silla Observatory. </h3>
 										</header>
 									</article>
 									<article class="item">
