--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/me.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/mesquare.jpg" alt="" /></span>
 							<h1 id="title">Nanna Bach-Møller</h1>
 							<p> Early Stage researcher in Astrophysics. </p>
 						</div>
@@ -179,7 +179,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/ne.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/me.JPG" alt="" /></a>
 										<header>
 											<h3>Parallel to my studies I have long been working with outreach at <a href="https://en.planetarium.dk/">
 											Copenhagen Planetarium.</a> This collaboration has lead to many projects, including talks and events such
