--- a/index.html
+++ b/index.html
@@ -173,54 +173,48 @@
 							</header>
 
 							<p> To me, one of the most beautiful aspects of astrophysics is how many thoughts and emotions
-							is can create, not just i myself but in other people as well. So when I'm not doing research
-							I often enjoy sharing these thoughts with other people through outreach and creative projects.  </p>
+							it can create, not just in myself but in others as well. So when I'm not doing research
+							I often enjoy sharing these thoughts with other people through outreach and creative projects. </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/me.JPG" alt="" /></a>
+										<a href="https://en.planetarium.dk/" class="image fit"><img src="images/me.JPG" alt="" /></a>
 										<header>
 											<h3>Parallel to my studies I have long been working with outreach at <a href="https://en.planetarium.dk/">
 											Copenhagen Planetarium.</a> This collaboration has lead to many projects, including talks and events such
 											as <a href="https://planetarium.dk/program/chasing-stars-in-chairs/"> Chasing Stars in Chairs</a> and
 											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>,
-											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog</a> over
-											my time as an observer at La Silla Observatory. </h3>
+											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog over my time </a>
+											as an observer at La Silla Observatory. </h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/clouds.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>The <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a> project has an integrated art aspect,
+											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
+											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>
+											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a> , in her
+											interpretation of the concept of Clouds. </h3>
 										</header>
 									</article>
 								</div>
-								<div class="col-4 col-12-mobile">
+								<div class="col-8 col-12-mobile">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>The <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a> project has an integrated art aspect,
+											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
+											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>
+											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a> , in her
+											interpretation of the concept of Clouds. </h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
 										</header>
 									</article>
 								</div>
