--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       
 							<div align="left">
 								<header>
-									<h3>Experience/h3>
+									<h3>Experience</h3>
 								</header>
 								<p><b><u> 2018 - 2020 - Master's degree in Physics | University of Copenhagen </b></u><br>
 								Major in Astrophysics. Thesis on <em>"Atmospheric Disequilibrium Model - Model Development for Exoplanet Atmosphere Simulations"</em> <br>
