--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<a href="https://www.ku.dk/english/">University of Copenhagen</a> 
 								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
 								stage researcher at the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. 
-								If you would like to know a bit about what I'm doing, you are welcome to take a look at some of 
+								If you would like to know more about what I'm doing, you are welcome to take a look at some of 
 								my projects below.</p>
 							</header>
 
@@ -92,10 +92,10 @@
 							<p> My main field of interest is astrobiology, the search for life in space, and I am especially interested in
 							how life might be discovered on distant exoplanets, by looking at so-called biosignatures in the atmospheres of the planets. 
 							In my current research I am trying to study how clouds affect the chemistry of exoplanet atmospheres, and how prebiotic
-							molecules (the precursors of life) might form in cloud droplets. During this project I am doing experiments with
-							clouds in an atmosphere chamber, to look at how they form and develop under gamma and UV radiation. Later I am hoping
+							molecules (the precursors of life) might form in cloud droplets. During this project, I am doing experiments with
+							clouds in an atmosphere chamber, to look at how they form and develop under gamma and UV radiation. Later I plan
 							to implement these results in our computer models of atmospheres, so we can use the models to potentially identify
-							life when we look at real exoplanets. </p>
+							life when we look at the atmosphere of real exoplanets. </p>
 							
 							<header>
 								<h3>Publications</h3>
