--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#research" id="research-link"><span class="icon solid fa-globe-europe">Research</span></a></li>
 								<li><a href="#activities" id="activities-link"><span class="icon solid fa-rocket">Other Activities</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<!-- <li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li> -->
+								<li><a href="#cv" id="about-link"><span class="icon solid fa-scroll">CV</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
