--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#research" id="research-link"><span class="icon solid fa-globe-europe">Research</span></a></li>
 								<li><a href="#activities" id="activities-link"><span class="icon solid fa-rocket">Other Activities</span></a></li>
 								<!-- <li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li> -->
-								<li><a href="#cv" id="about-link"><span class="icon solid fa-scroll">CV</span></a></li>
+								<li><a href="#cv" id="cv-link"><span class="icon solid fa-scroll">CV</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -188,6 +188,7 @@
 						</div>
 					</section>
 
+				
 				<!-- CV -->
 					<section id="cv" class="four">
 						<div class="container">
@@ -270,7 +271,7 @@
 
 			</div>
 		
-		<!-- About Me -->  <!-- REMOVE FOOTER
+		<!-- About Me -->  <!-- REMOVE SECTION
 					<section id="about" class="two">
 						<div class="container">
 
