--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 							<header>
 								<h2 class="alt">Welcome!</h2>
 								<p> Hi, my name is Nanna, and I am a PhD student at the 
-								<a href="https://www.ku.dk/english/">University of Copenhagen</a> 
+								<a href="https://www.ku.dk/english/">University of Copenhagen</a>, 
+								<a href="https://www.st-andrews.ac.uk/physics-astronomy/">University of St Andrews</a>,
 								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
 								stage researcher at the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. 
 								If you would like to know more about what I'm doing, you are welcome to take a look at some of 
@@ -168,6 +169,15 @@
 											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>,
 											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog over my time </a>
 											as an observer at La Silla Observatory. </h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="https://en.planetarium.dk/" class="image fit"><img src="images/AeoundDistantSuns.jpg" alt="" /></a>
+										<header>
+											<h3>In the spring 2021 I participated in a collaboration between scientists and Sci-Fi writers initiated by
+											Emma Puranen at <a href="https://exoplanets.wp.st-andrews.ac.uk/"> StACES, the University of St Andrews</a>.
+											The collaboration resultet in a series of short stories that has later been published under the 
+											title <a href="http://www.guardbridgebooks.co.uk/shop/index.php?rt=product/product&product_id=146"> Around Distant Suns</a>. </h3>
 										</header>
 									</article>
 								</div>
