--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 										<header>
 											<h3>The <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a> project has an integrated art aspect,
 											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
-											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>
-											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a> , in her
+											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>.
+											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a>, in making a video for her
 											interpretation of the concept of Clouds. </h3>
 										</header>
 									</article>
