--- a/index.html
+++ b/index.html
@@ -161,18 +161,19 @@
 							<div class="row">
 								<div class="col-5 col-12-mobile">
 									<article class="item">
-										<a href="https://en.planetarium.dk/" class="image fit"><img src="images/AroundDistantSuns.jpg" alt="" /></a>
+										<a href="http://www.guardbridgebooks.co.uk/shop/index.php?rt=product/product&product_id=146" class="image fit"><img src="images/AroundDistantSuns.jpg" alt="" /></a>
 										<header>
 											<h3>In the spring 2021 I participated in a collaboration between scientists and Sci-Fi writers initiated by
 											Emma Puranen at <a href="https://exoplanets.wp.st-andrews.ac.uk/"> StACES, the University of St Andrews</a>.
 											The collaboration resultet in a series of short stories that has later been published under the 
-											title <a href="http://www.guardbridgebooks.co.uk/shop/index.php?rt=product/product&product_id=146"> Around Distant Suns</a>. </h3>
+											title <a href="http://www.guardbridgebooks.co.uk/shop/index.php?rt=product/product&product_id=146">
+											Around Distant Suns</a>. </h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-7 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/clouds.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/clouds.jpg" alt="" /></a>
 										<header>
 											<h3>The <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a> project has an integrated art aspect,
 											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
