--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Labsetup.jpg" alt="" /></a>
+										<a class="image fit"><img src="images/Labsetup.jpg" alt="" /></a>
 										<header>
 											<h3> In my current research I use an atomizer to introduce SiO2 particles into an atmosphere
 											chamber. Similarly to the environment in the upper atmosphere, the particles in the chamber are
@@ -131,7 +131,7 @@
 								</div>
 								<div class="col-6 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Abundanceprofile.png" alt="" /></a>
+										<a class="image fit"><img src="images/Abundanceprofile.png" alt="" /></a>
 										<header>
 											<h3>Atmosphere models can be used to simulate the chemical and physical processes taking place
 											in an atmosphere, and thereby predict the structure of the atmosphere based on e.g. the chemical
