--- a/index.html
+++ b/index.html
@@ -277,6 +277,14 @@
 							</form>
 						-->
 
+							<div class="row">
+								<div class="col-12 col-12-mobile">
+									<article class="item">
+										<a class="image fit"><img src="images/logos.png" alt="" /></a>
+									</article>
+								</div>
+		
+							</div>
 						</div>
 					</section>
 
