--- a/index.html
+++ b/index.html
@@ -276,11 +276,12 @@
 								</div>
 							</form>
 						-->
-
+							<p> </p>
+							
 							<div class="row">
 								<div class="col-12 col-12-mobile">
 									<article class="item">
-										<a class="image fit"><img src="images/logos.png" alt="" /></a>
+										<a class="image fit"><img src="images/logostrans.png" alt="" /></a>
 									</article>
 								</div>
 		
