--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					</section>
 
 				
-				<!-- Contact -->
+				<!-- Contact and Affiliations -->
 					<section id="contact" class="three">
 						<div class="container">
 							
