--- a/index.html
+++ b/index.html
@@ -246,9 +246,13 @@
 							
 							<div align="left">
           						<div class="content">
+								<div class="name">
+              								<span class="fas fa-user"></span>
+              								<span class="text"> Nanna Bach-Møller </span>
+            							</div>
             							<div class="place">
               								<span class="fas fa-map-marker-alt"></span>
-              								<span class="text"> Centre for ExoLife Sciences, Niels Bohr Insitute, Copenhagen, Denmark </span>
+              								<span class="text"> Øster Voldgade 5-7, Centre for ExoLife Sciences, Niels Bohr Insitute, Copenhagen, Denmark </span>
             							</div>
             							<div class="email">
               								<span class="fas fa-envelope"></span>
