--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home"><<h1>Intro</h1></span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#research" id="research-link"><span class="icon solid fa-globe-europe">Research</span></a></li>
 								<li><a href="#activities" id="activities-link"><span class="icon solid fa-rocket">Other Activities</span></a></li>
 								<!-- <li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li> -->
