--- a/index.html
+++ b/index.html
@@ -316,16 +316,16 @@
 					</section>
 		-->
 
-		<!-- Footer --> <!-- REMOVE FOOTER
+		<!-- Footer --> 
 			<div id="footer">
 
-				<!-- Copyright --> <!-- REMOVE FOOTER
+				<!-- Copyright --> 
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
-		-->
+		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
