--- a/index.html
+++ b/index.html
@@ -252,11 +252,19 @@
             							</div>
             							<div class="place">
               								<span class="fas fa-map-marker-alt"></span>
-              								<span class="text"> Øster Voldgade 5-7, Centre for ExoLife Sciences, Niels Bohr Insitute, Copenhagen, Denmark </span>
+              								<span class="text"> Øster Voldgade 5-7, Centre for ExoLife Sciences, Niels Bohr Insitute, University of Copenhagen, Copenhagen, Denmark </span>
+            							</div>
+								<div class="place">
+              								<span class="fas fa-map-marker-alt"></span>
+              								<span class="text"> Schmiedlstraße 6, Institut für Weltraumforschung, Austrian Academy of Science, Graz, Austria </span>
             							</div>
             							<div class="email">
               								<span class="fas fa-envelope"></span>
               								<span class="text">nanna.bach.moeller@nbi.ku.dk</span>
+            							</div>
+								<div class="email">
+              								<span class="fas fa-envelope"></span>
+              								<span class="text">nanna.bach-moller@oeaw.ac.at</span>
             							</div>
           						</div>
 							</div>
