--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
 											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>.
 											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a>, in making a video for her
-											interpretation of the concept of Clouds. </h3>
+											interpretation of the concept of Clouds in collaboration with content producer <a href="https://www.instagram.com/by_pless/"> by_pless</a>. </h3>
 										</header>
 									</article>
 									<article class="item">
@@ -189,8 +189,8 @@
 											Copenhagen Planetarium.</a> This collaboration has lead to many projects, including talks and events such
 											as <a href="https://planetarium.dk/program/chasing-stars-in-chairs/"> Chasing Stars in Chairs</a> and
 											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>,
-											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog over my time </a>
-											as an observer at La Silla Observatory. </h3>
+											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog over my time
+											as an observer at La Silla Observatory </a>. </h3>
 										</header>
 									</article>
 								</div>
