--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 								<h2 class="alt">Welcome!</h2>
 								<p> Hi, my name is Nanna, and I am a PhD student at the 
 								<a href="https://www.ku.dk/english/">University of Copenhagen</a>, 
-								<a href="https://www.st-andrews.ac.uk/physics-astronomy/">University of St Andrews</a>,
+								<a href="https://www.oeaw.ac.at/iwf/home">Austrian Academy of Sciences</a>,
 								and <a href="https://www.tugraz.at/home/">Graz University of Technology</a>, as well as an early
-								stage researcher at the Marie Curie ITN <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a>. 
+								stage researcher at the Marie Curie ITN <a href="https://chameleon.iwf.oeaw.ac.at/">CHAMELEON</a>. 
 								If you would like to know more about what I'm doing, you are welcome to take a look at some of 
-								my projects below.</p>
+								my projects below, or contact me at nanna.bach.moeller@nbi.ku.dk.</p>
 							</header>
 
 							<footer>
@@ -175,7 +175,7 @@
 									<article class="item">
 										<a class="image fit"><img src="images/clouds.jpg" alt="" /></a>
 										<header>
-											<h3>The <a href="https://chameleon.wp.st-andrews.ac.uk/">CHAMELEON</a> project has an integrated art aspect,
+											<h3>The <a href="https://chameleon.iwf.oeaw.ac.at/">CHAMELEON</a> project has an integrated art aspect,
 											and through here I'm currently part of the <a href="https://www.projectatelier.space/expoplanet">Ex(p)oplanet </a>
 											collaboration between the scientists of CHAMELEON and artists from <a href="http://www.slac.be/academie/projectatelier.html">SLAC </a>.
 											In one project, Swirls, I have assisted <a href="https://www.wilmageyskens.be/">Wilma Geyskens</a>, in making a video for her
@@ -250,15 +250,7 @@
               								<span class="fas fa-user"></span>
               								<span class="text"> Nanna Bach-Møller </span>
             							</div>
-            							<div class="place">
-              								<span class="fas fa-map-marker-alt"></span>
-              								<span class="text"> Øster Voldgade 5-7, Centre for ExoLife Sciences, Niels Bohr Insitute, University of Copenhagen, Copenhagen, Denmark </span>
-            							</div>
-								<div class="place">
-              								<span class="fas fa-map-marker-alt"></span>
-              								<span class="text"> Schmiedlstraße 6, Institut für Weltraumforschung, Austrian Academy of Science, Graz, Austria </span>
-            							</div>
-            							<div class="email">
+								<div class="email">
               								<span class="fas fa-envelope"></span>
               								<span class="text">nanna.bach.moeller@nbi.ku.dk</span>
             							</div>
@@ -266,6 +258,14 @@
               								<span class="fas fa-envelope"></span>
               								<span class="text">nanna.bach-moller@oeaw.ac.at</span>
             							</div>
+            							<div class="place">
+              								<span class="fas fa-map-marker-alt"></span>
+              								<span class="text"> Øster Voldgade 5-7, Centre for ExoLife Sciences, Niels Bohr Insitute, University of Copenhagen, Copenhagen, Denmark </span>
+            							</div>
+								<div class="place">
+              								<span class="fas fa-map-marker-alt"></span>
+              								<span class="text"> Schmiedlstraße 6, Institut für Weltraumforschung, Austrian Academy of Science, Graz, Austria </span>
+								</div>
           						</div>
 							</div>
         						
