--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
 											<h3>Parallel to my studies I have long been working with outreach at <a href="https://en.planetarium.dk/">
 											Copenhagen Planetarium.</a> This collaboration has lead to many projects, including talks and events such
 											as <a href="https://planetarium.dk/program/chasing-stars-in-chairs/"> Chasing Stars in Chairs</a> and
-											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>,
+											<a href="https://planetarium.dk/program/science-slam-faa-toptunet-din-viden-om-universet/"> Science Slam</a>, 
+											<a href="https://planetarium.dk/program/kosmisk-comedy/"> Cosmic Comedy</a>,
 											and a <a href="https://planetarium.dk/la-silla-observatoriet-i-chile/"> vlog over my time
 											as an observer at La Silla Observatory </a>. </h3>
 										</header>
